# multi-tenancy-system

./: .gitignore  .pdm-python  LICENSE  README.md  TODO.md  alembic.ini  main.py  manage.py  pyproject.toml  requirements.txt  ruff.toml
.guide/: alembic_commands.md  pdm.md
.guide/database/: local_database_setup.md
_guide/: README.md
_guide/alembic/: alembic_commands.md
_guide/database/: local_database_setup.md
_setup_guide/GCP/: postgres_compose.yml  postgres_setup.md
_setup_guide/alembic/: alembic_commands.md
_setup_guide/database/: database_structure.md
app/api/tenant/: router.py
app/api/user/: router.py  schema.py
app/config/: settings.py
app/config/database/: __init__.py  engine.py
app/models/: __init__.py  base.py  tenant.py  user.py
management/: manage.py
management/commands/: tenant.py
migrations/: __init__.py  env.py  script.py.mako  tenant.py
migrations/versions/: 001_create_shared_schema__81e833.py  001_create_tenants_table__3869ce.py  002_create_tenant_default_schema__6c5887.py  003_create_tenants_table__5fae0a.py
scripts/: startup.py
src/multi_tenancy_system/: logger.py  logging-config.yml  main.py  settings.py
src/multi_tenancy_system/api/tenant/: __init__.py  router.py  schema.py  service.py
src/multi_tenancy_system/database/: __init__.py  connection.py  engine.py
src/multi_tenancy_system/models/: base.py  tenant.py
