[project]
name = "multi_tenancy_system"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Madeeha-Anjum", email = "email@email.com" }]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }
# prerequisites = ["python>=3.11", "pdm>=2.13.0"]
dependencies = [
    "fastapi>=0.111.0",         # for web framework
    "uvicorn>=0.29.0",          # for ASGI server
    "pydantic>=2.7.1",          # for data validation
    "psycopg2-binary>=2.9.9",   # for PostgreSQL
    "SQLAlchemy>=2.0.28",       # for ORM
    "alembic>=1.13.1",          # for database migrations
    "typeguard>=4.1.5",         # for type checking
    "typer>=0.12.3",            # for CLI
    "pydantic-settings>=2.2.1", # for settings management 
    "python-dotenv>=1.0.1",     # for environment variables
]

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.3.4"]

[tool.pdm.scripts]
start = "uvicorn multi_tenancy_system.main:app --reload --app-dir ./src"
manage = "python ./management/manage.py"
